[gd_scene load_steps=2 format=3 uid="uid://ql14bcewd5ld"]

[ext_resource type="Script" path="res://scripts/music_server.gd" id="1_rwdiu"]

[node name="MusicServer" type="Node"]
process_mode = 3
script = ExtResource("1_rwdiu")

[node name="music_player" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="replay_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="finished" from="music_player" to="." method="_on_music_player_finished"]
[connection signal="timeout" from="replay_timer" to="." method="_on_replay_timer_timeout"]
